# nmea_driver

./: CMakeLists.txt  package.xml  setup.py
launch/: nmea_publisher.launch
scripts/: nmea_serial_driver  nmea_topic_driver  nmea_topic_serial_reader
src/libnmea_parser/: driver.py
