<?xml version="1.0"?>
<package>
    <name>nmea_driver</name>
    <version>1.0.0</version>
    <description>
        Package to parse NMEA strings and publish a very simple GPS message.
        Does not require the GPSD deamon.
    </description>

    <maintainer email="rmm@uninova.pt">Ricardo Mendonça</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>

    <author email="eric@ericperko.com">Eric Perko</author>
    <author>Steven Martin</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslint</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>python-serial</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
        <architecture_independent/>
    </export>
</package>
